first backend + frontend integration

--- a/frontend/src/components/message-field/message-field.html
+++ b/frontend/src/components/message-field/message-field.html
@@ -8,7 +8,7 @@
     placeholder="Twoje pytanie..."
     [(ngModel)]="text"
   ></textarea>
-  <button matSuffix matIconButton [disabled]="!text()">
+  <button matSuffix matIconButton [disabled]="!text()" (click)="send()">
     <mat-icon>send</mat-icon>
   </button>
 </mat-form-field>
