--- a/frontend/src/components/chatbot/chatbot.html
+++ b/frontend/src/components/chatbot/chatbot.html
@@ -1,5 +1,2 @@
-<app-chat-history
-  [messages]="messages.data() ?? []"
-  [generatedResponse]="generatedResponse()"
-></app-chat-history>
+<app-chat-history [messages]="messages.data() ?? []"></app-chat-history>
 <app-message-field (onSendSuccess)="onSendSuccess($event)"></app-message-field>
